# bevy_settings_assets

./: Cargo.toml
assets/: a.settings  b.settings
examples/: hello_world.rs
src/: lib.rs
